--- a/package.json
+++ b/package.json
@@ -1,32 +1,1 @@
-{
-  "name": "mr-stylo-academy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "firebase": "^10.7.1",
-    "zustand": "^4.5.0",
-    "lucide-react": "^0.309.0",
-    "react-latex-next": "^2.2.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "@ducanh2912/next-pwa": "^10.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
-}
+{\n  "name": "mr-stylo-academy",\n  "version": "0.1.0",\n  "private": true,\n  "scripts": {\n    "dev": "next dev",\n    "build": "next build",\n    "start": "next start",\n    "lint": "next lint"\n  },\n  "dependencies": {\n    "next": "^14.1.0",\n    "react": "^18",\n    "react-dom": "^18",\n    "firebase": "^10.7.1",\n    "zustand": "^4.5.0",\n    "lucide-react": "^0.309.0",\n    "react-latex-next": "^2.2.0",\n    "clsx": "^2.1.0",\n    "tailwind-merge": "^2.2.0"\n  },\n  "devDependencies": {\n    "typescript": "^5",\n    "@types/node": "^20",\n    "@types/react": "^18",\n    "@types/react-dom": "^18",\n    "autoprefixer": "^10.0.1",\n    "postcss": "^8",\n    "tailwindcss": "^3.3.0"\n  }\n}
